--- a/web/success.html
+++ b/web/success.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home | Titan Online Banking Application</title>
+        <title>Success | Titan Online Banking Application</title>
         <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>Titan Online Banking Application</h1>
+        <h1>Account Created!</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="login.html">Login</a>
             <a href="new_customer.jsp">New Customer</a>
         </nav>
+        <p>Your new account has been successfully created.</p>
     </body>
 </html>
