--- a/web/login_failure.html
+++ b/web/login_failure.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home | Titan Online Banking Application</title>
+        <title>Login Failed | Titan Online Banking Application</title>
         <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>Titan Online Banking Application</h1>
+        <h1>Login Failed!</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="login.html">Login</a>
             <a href="new_customer.jsp">New Customer</a>
         </nav>
+        <p>You have entered and invalid username and/or password.</p>
     </body>
 </html>
